# ivs2-mathlib

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Install.cmake
inc/: ivs-math.hpp
src/: ivs-math.cpp
tst/: tests.cpp
